--- a/demo/index.html
+++ b/demo/index.html
@@ -18,8 +18,8 @@
         </div>
     </div>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/angularjs/angular.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/angularjs/angular.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
