tooltip follow pointer

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>MyTooltip</title>
+    <style>
+        #detail {
+            background-color: cornflowerblue;
+            position: absolute;
+        }
+    </style>
 </head>
 <body ng-controller="MainCtrl">
 
